package com.example.app.dependency.good;

public interface IDatabaseService {
    void connect();
    void disconnect();
}
