package com.example.app.dependency.good;

public interface IFileService {
    void storeFile(String path);
}
