package com.example.app.dependency.good;

public interface IMailService {
    void sendEmail(String msg);
}
