package com.example.app.dependency.good;

public interface IPhoneService {
    void sendSMS(String msg);
}
